Bug 1800437 - Correct behavior of GetClusterLength helper when applying text-overflow:ellipsis in RTL. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D162095